--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
-    <title>Odin Recipes</title>
+    <title>mac and cheese</title> 
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/mac-and-cheese.html">mac and cheese</a>
+    <h1>mac and cheese</h1>
   </body>
 </html>
