--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -8,5 +8,28 @@
   </head>
   <body>
     <h1>mac and cheese</h1>
+    <img src="../images/macAndCheese.jpeg" alt="a delicious picture of mac and cheese" width="500px">
+    <h2>Description</h2>
+    <p>Macaroni and cheese (also called mac and cheese in Canada and the United States and macaroni cheese in the United Kingdom) is a dish of cooked macaroni pasta and a cheese sauce, most commonly cheddar sauce. </p>
+    <p>The traditional macaroni and cheese is a casserole baked in the oven; however, it may be prepared in a sauce pan on top of the stove or using a packaged mix.The cheese is often first incorporated into a Béchamel sauce to create a Mornay sauce, which is then added to the pasta. In the United States, it is considered a comfort food</p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>2 cups elbow macaroni</li>
+      <li>2 cups shredded cheddar cheese</li>
+      <li>2 cups milk</li>
+      <li>2 tablespoons butter</li>
+      <li>2 tablespoons all-purpose flour</li>
+      <li>Salt and black pepper to taste</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Cook the macaroni according to the package instructions. Drain and set aside.</li>
+      <li>In a large pot, melt the butter over medium heat. Add the flour and whisk to create a roux. Cook for a minute or two until the mixture is smooth and slightly golden.</li>
+      <li>Gradually add the milk to the roux, whisking constantly to avoid lumps. Cook and whisk until the sauce thickens, about 5-7 minutes.</li>
+      <li>Reduce the heat to low and gradually add the shredded cheese, stirring until melted and smooth.</li>
+      <li>Season the cheese sauce with salt and black pepper to taste.</li>
+      <li>Add the cooked macaroni to the cheese sauce and stir until well coated.</li>
+      <li>Serve the mac and cheese warm.</li>
+    </ol>
   </body>
 </html>
