--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/mac-and-cheese.html">mac and cheese</a>
+    <ul>
+      <li><a href="./recipes/mac-and-cheese.html">mac and cheese</a></li>
+      <li><a href="./recipes/cheeseBurger.html">CheeseBurger</a></li>
+      <li></li>
+    </ul>
   </body>
 </html>
