--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="./recipes/mac-and-cheese.html">mac and cheese</a></li>
-      <li><a href="./recipes/cheeseBurger.html">CheeseBurger</a></li>
-      <li></li>
+      <li><a href="./recipes/mac-and-cheese.html">Mac and Cheese</a></li>
+      <li><a href="./recipes/cheeseBurger.html">Cheese Burger</a></li>
+      <li><a href="./recipes/stirFryNoodles.html">Stir Fry Noodles</a></li>
     </ul>
   </body>
 </html>
