--- a/recipes/cheeseBurger.html
+++ b/recipes/cheeseBurger.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Cheese Burger</h1>
-    <img src="../images/cheeseBurger.jpeg" alt="a image of cheeseBurger" width="50%">
+    <img src="../images/cheeseBurger.jpeg" alt="a image of cheeseBurger" width="50%" height="auto">
     <h2>Description</h2>
     <p>A cheeseburger is a burger with a slice of melted cheese on top of the meat patty, added near the end of the cooking time. Cheeseburgers can include variations in structure, ingredients and composition. As with other hamburgers, a cheeseburger may include various condiments and other toppings such as lettuce, tomato, onion, pickles, bacon, avocado, mushrooms, mayonnaise, ketchup, and mustard. </p>
     <p>In US fast food restaurants, processed cheese is usually used, although other meltable cheeses are used, such as cheddar, Swiss, mozzarella, blue cheese, or pepper jack. Restaurant chains that sell cheeseburgers include McDonald's, Burger King, and Wendy's.</p>
