add style to the recipes page

--- a/recipes/stirFryNoodles.html
+++ b/recipes/stirFryNoodles.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../style/style.css" rel="stylesheet">
     <title>Stir Fry Noodles</title>
   </head>
   <body>
-    <h1>Stir Fry Noodles</h1>
-    <img src="../images/stirFryNoodles.jpeg" alt="a image of sizzling Stir fry Noodles" width="50%" height="auto">
-    <h2>Description</h2>
+    <h1 class="aligncenter">Stir Fry Noodles</h1>
+    <p class="aligncenter"> <img src="../images/stirFryNoodles.jpeg" alt="a image of sizzling Stir fry Noodles" width="50%" height="auto"> </p>
+    <h2 class="aligncenter">Description</h2>
     <p>Steaming and aromatic, a plate of stir-fry noodles is a testament to the balance between tradition and innovation. From bustling street markets to cozy kitchens, this dish transcends cultural boundaries, offering a taste of the meticulous craft behind its creation. As you savor its symphony of flavors and textures, you're invited to partake in a culinary journey that celebrates the magic that happens when simplicity meets expertise in a single sizzling wok.</p>
     <p>Stir-fry noodles are a whirlwind of taste and texture, where tender noodles mingle with an array of crisp vegetables and protein, all coated in a flavorful sauce. This quick and skillful cooking technique brings together the best of both worlds, offering a medley that's satisfying and visually appealing. The stir-fry sauce, a magical concoction of soy, ginger, and garlic, infuses every ingredient with a burst of umami, making each bite a delightful surprise. From the bustling kitchens of Asian street vendors to cozy home setups, stir-fry noodles evoke a sense of culinary adventure that's as accessible as it is delicious.</p>
-    <h2>Ingredients</h2>
+    <h2 class="aligncenter">Ingredients</h2>
     <ul>
       <li>Noodles</li>
       <li>sliced chicken</li>
@@ -21,7 +21,7 @@
       <li>Oil</li>
       <li>Garnishes</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="aligncenter">Steps</h2>
     <ol>
       <li>Cook the noodles according to the package instructions. Drain and set aside.</li>
       <li>Heat a wok or large skillet over high heat and add oil.</li>
