--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="./style/style.css" rel="stylesheet">
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="aligncenter">Odin Recipes</h1>
     <ul>
       <li><a href="./recipes/mac-and-cheese.html">Mac and Cheese</a></li>
       <li><a href="./recipes/cheeseBurger.html">Cheese Burger</a></li>
