--- a/recipes/cheeseBurger.html
+++ b/recipes/cheeseBurger.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../style/style.css" rel="stylesheet">
     <title>Cheese Burger</title>  
   </head>
   <body>
-    <h1>Cheese Burger</h1>
-    <img src="../images/cheeseBurger.jpeg" alt="a image of cheeseBurger" width="50%" height="auto">
-    <h2>Description</h2>
+    <h1 class="aligncenter">Cheese Burger</h1>
+    <p class="aligncenter"> <img src="../images/cheeseBurger.jpeg" alt="a image of cheeseBurger" width="50%" height="auto"> </p>
+    <h2 class="aligncenter">Description</h2>
     <p>A cheeseburger is a burger with a slice of melted cheese on top of the meat patty, added near the end of the cooking time. Cheeseburgers can include variations in structure, ingredients and composition. As with other hamburgers, a cheeseburger may include various condiments and other toppings such as lettuce, tomato, onion, pickles, bacon, avocado, mushrooms, mayonnaise, ketchup, and mustard. </p>
     <p>In US fast food restaurants, processed cheese is usually used, although other meltable cheeses are used, such as cheddar, Swiss, mozzarella, blue cheese, or pepper jack. Restaurant chains that sell cheeseburgers include McDonald's, Burger King, and Wendy's.</p>
-    <h2>Ingredients</h2>
+    <h2 class="aligncenter">Ingredients</h2>
     <ul>
       <li>Ground Beef</li>
       <li>Cheese</li>
@@ -22,7 +22,7 @@
       <li>Onion</li>
       <li>Condiments</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="aligncenter">Steps</h2>
     <ol>
       <li>Shape the ground beef into patties, season with salt and pepper, and cook them on a grill, stovetop, or griddle until your desired level of doneness is achieved.</li>
       <li>During the last minute of cooking, place a slice of cheese on each patty and cover with a lid to allow the cheese to melt.</li>
