--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1 class="aligncenter">Odin Recipes</h1>
-    <ul>
-      <li><a href="./recipes/mac-and-cheese.html">Mac and Cheese</a></li>
-      <li><a href="./recipes/cheeseBurger.html">Cheese Burger</a></li>
-      <li><a href="./recipes/stirFryNoodles.html">Stir Fry Noodles</a></li>
-    </ul>
+    <h1 class="aligncenter" style="font-size:35px;">Odin Recipes</h1>
+    <div class="navL">
+      <ul>
+        <li class="links"><a href="./recipes/mac-and-cheese.html">Mac and Cheese</a></li>
+        <li class="links"><a href="./recipes/cheeseBurger.html">Cheese Burger</a></li>
+        <li class="links"><a href="./recipes/stirFryNoodles.html">Stir Fry Noodles</a></li>
+      </ul>
+    </div>
   </body>
 </html>
