add margins and paddings to recipes

--- a/recipes/cheeseBurger.html
+++ b/recipes/cheeseBurger.html
@@ -8,10 +8,13 @@
   </head>
   <body>
     <h1 class="aligncenter">Cheese Burger</h1>
-    <p class="aligncenter"> <img src="../images/cheeseBurger.jpeg" alt="a image of cheeseBurger" width="50%" height="auto"> </p>
+    <p class="aligncenter"> <img src="../images/cheeseBurger.jpeg" alt="a image of cheeseBurger"> </p>
+    <div class="description">
     <h2 class="aligncenter">Description</h2>
     <p>A cheeseburger is a burger with a slice of melted cheese on top of the meat patty, added near the end of the cooking time. Cheeseburgers can include variations in structure, ingredients and composition. As with other hamburgers, a cheeseburger may include various condiments and other toppings such as lettuce, tomato, onion, pickles, bacon, avocado, mushrooms, mayonnaise, ketchup, and mustard. </p>
     <p>In US fast food restaurants, processed cheese is usually used, although other meltable cheeses are used, such as cheddar, Swiss, mozzarella, blue cheese, or pepper jack. Restaurant chains that sell cheeseburgers include McDonald's, Burger King, and Wendy's.</p>
+    </div>
+    <div class="ingredients">
     <h2 class="aligncenter">Ingredients</h2>
     <ul>
       <li>Ground Beef</li>
@@ -22,6 +25,8 @@
       <li>Onion</li>
       <li>Condiments</li>
     </ul>
+    </div>
+    <div class="steps">    
     <h2 class="aligncenter">Steps</h2>
     <ol>
       <li>Shape the ground beef into patties, season with salt and pepper, and cook them on a grill, stovetop, or griddle until your desired level of doneness is achieved.</li>
@@ -33,5 +38,6 @@
       <li>Place the top bun over the assembled ingredients to complete the cheeseburger.</li>
       <li>Serve the cheeseburgers with a side of fries or your favorite accompaniments.</li>
     </ol>
+    </div>
   </body>
 </html>
