--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -8,10 +8,13 @@
   </head>
   <body>
     <h1 class="aligncenter">mac and cheese</h1>
-    <p class="aligncenter"> <img src="../images/macAndCheese.jpeg" alt="a delicious picture of mac and cheese" width="50%" height="auto"> </p>
+    <p class="aligncenter"> <img src="../images/macAndCheese.jpeg" alt="a delicious picture of mac and cheese" > </p>
+    <div class="description">  
     <h2 class="aligncenter">Description</h2>
     <p>Macaroni and cheese (also called mac and cheese in Canada and the United States and macaroni cheese in the United Kingdom) is a dish of cooked macaroni pasta and a cheese sauce, most commonly cheddar sauce. </p>
     <p>The traditional macaroni and cheese is a casserole baked in the oven; however, it may be prepared in a sauce pan on top of the stove or using a packaged mix.The cheese is often first incorporated into a Béchamel sauce to create a Mornay sauce, which is then added to the pasta. In the United States, it is considered a comfort food</p>
+    </div>
+    <div class="ingredients">
     <h2 class="aligncenter">Ingredients</h2>
     <ul>
       <li>2 cups elbow macaroni</li>
@@ -21,6 +24,8 @@
       <li>2 tablespoons all-purpose flour</li>
       <li>Salt and black pepper to taste</li>
     </ul>
+    </div>
+    <div class="steps">
     <h2 class="aligncenter">Steps</h2>
     <ol>
       <li>Cook the macaroni according to the package instructions. Drain and set aside.</li>
@@ -31,5 +36,6 @@
       <li>Add the cooked macaroni to the cheese sauce and stir until well coated.</li>
       <li>Serve the mac and cheese warm.</li>
     </ol>
+    </div>
   </body>
 </html>
