--- a/recipes/stirFryNoodles.html
+++ b/recipes/stirFryNoodles.html
@@ -8,10 +8,13 @@
   </head>
   <body>
     <h1 class="aligncenter">Stir Fry Noodles</h1>
-    <p class="aligncenter"> <img src="../images/stirFryNoodles.jpeg" alt="a image of sizzling Stir fry Noodles" width="50%" height="auto"> </p>
+    <p class="aligncenter"> <img src="../images/stirFryNoodles.jpeg" alt="a image of sizzling Stir fry Noodles"> </p>
+    <div class="description">
     <h2 class="aligncenter">Description</h2>
     <p>Steaming and aromatic, a plate of stir-fry noodles is a testament to the balance between tradition and innovation. From bustling street markets to cozy kitchens, this dish transcends cultural boundaries, offering a taste of the meticulous craft behind its creation. As you savor its symphony of flavors and textures, you're invited to partake in a culinary journey that celebrates the magic that happens when simplicity meets expertise in a single sizzling wok.</p>
     <p>Stir-fry noodles are a whirlwind of taste and texture, where tender noodles mingle with an array of crisp vegetables and protein, all coated in a flavorful sauce. This quick and skillful cooking technique brings together the best of both worlds, offering a medley that's satisfying and visually appealing. The stir-fry sauce, a magical concoction of soy, ginger, and garlic, infuses every ingredient with a burst of umami, making each bite a delightful surprise. From the bustling kitchens of Asian street vendors to cozy home setups, stir-fry noodles evoke a sense of culinary adventure that's as accessible as it is delicious.</p>
+    </div>
+    <div class="ingredients">
     <h2 class="aligncenter">Ingredients</h2>
     <ul>
       <li>Noodles</li>
@@ -21,6 +24,8 @@
       <li>Oil</li>
       <li>Garnishes</li>
     </ul>
+    </div>
+    <div class="steps">
     <h2 class="aligncenter">Steps</h2>
     <ol>
       <li>Cook the noodles according to the package instructions. Drain and set aside.</li>
@@ -34,5 +39,6 @@
       <li>Once everything is heated and well-mixed, remove from heat.</li>
       <li>Serve the stir-fry noodles in bowls and garnish with optional toppings if desired.</li>
     </ol>
+    </div>
   </body>
 </html>
